--- a/client/src/components/footer.css
+++ b/client/src/components/footer.css
@@ -1,5 +1,9 @@
 footer {
     width:100%;
     height:120px;
-    background:lightgray;
+    background:#181e2a;
+    color: #fff;
+    font-weight: 700;
+    font-size: 18px;
+    padding: 50px 0 20px;
 }
