--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,10 @@
+/*colors*/
+:root {
+  --bg-transparent: transparent;
+  --bg-dark: #0a101d;
+  --border-color: #cad8ec;
+  --text-color-white: #fff;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,11 +12,24 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: var(--bg-dark);
+  color:var(--text-color-white);
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+/*header*/
+.head-nav, 
+.header-icons{
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.header-icons a{
+  color:#fff;
 }
 
 /*override some materialize.css sitewide*/
@@ -22,6 +42,22 @@ h1 {
 .bRad {
   border-radius:8px;
 }
+/*cards*/
+.section-header__title {
+  font-size:2em;
+}
+.card {
+  background: var(--bg-transparent);
+  box-shadow:none;
+}
+.book-title{
+  color: #0ad89b;
+}
+.card-panel{
+  background: var(--bg-transparent);
+  border: 2px solid var(--border-color);
+  color: var(--border-color);
+}
 .card .card-image.bRadT img{
   border-top-left-radius: 8px;
   border-top-right-radius: 8px;
@@ -30,9 +66,165 @@ h1 {
   border-bottom-left-radius: 8px;
   border-bottom-right-radius: 8px;
 }
-
 .card .btn-floating.halfway-fab {
   position: absolute;
   right: 6px;
   top: 7px;
+}
+
+/*featured product*/
+.featured-container {
+  margin: 0 auto;
+  max-width: 1360px;
+  padding: 0 2.5rem;
+}
+.featured:before {
+  background-image: url(https://cdn.shopify.com/s/files/1/0642/3648/6870/t/17/assets/purple-swoop.svg);
+  content: "";
+  top: 0;
+  right: 0;
+  width: 44%;
+  height: 300px;
+  opacity: .8;
+  position: absolute;
+  background-size: contain;
+  background-position: top right;
+  background-repeat: no-repeat;
+  z-index: -1;
+}
+.featured-product__inner {
+  margin: 50px 0 0;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-around;
+}
+.product_details {
+  width: 42%;
+  display: flex;
+  align-items: flex-start;
+}
+.product-details {
+  padding: 0 80px 0 0; /*media query this later*/
+}
+.product-tag {
+  display: inline-flex;
+  background: transparent;
+  color: #0ad89b;
+  text-transform: uppercase;
+  border-radius: 12px;
+  background: transparent;
+  border: 1px solid #0ad89b;
+  padding: 4px 17px;
+  font-weight: bold;
+  font-size: 10px;
+  line-height: 10px;
+}
+.featured-product__img img {
+  max-width: 100%;
+  height: auto;
+  max-height: 400px;
+}
+.featured-product__img {
+  width: 40%;
+  height: 40%;
+  display: flex;
+  flex-shrink: 0;
+  align-items: flex-start;
+  justify-content: center;
+  padding: 0 16px 32px;
+}
+.featured-product__title {
+  font-size: 48px;
+  line-height: 60px;
+  font-weight: 600;
+  margin: 0 5px 40px 0;
+  position: relative;
+}
+.featured-product__title:before {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 60px;
+  height: 3px;
+  background-color: #0ad89b;
+}
+.featured-product__title:before {
+  left: -5px;
+  bottom: -10px;
+  width: 54px;
+}
+.featured-product .product__details .product-details .product-description {
+  border-top: 0;
+  border-bottom: 0;
+}
+.featured .container:after {
+  opacity: .275;
+  content: "";
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  top: -3%;
+  left: -23%;
+  right: 0;
+  bottom: 0;
+  z-index: -1;
+  background-image: radial-gradient(ellipse at center, #8f68ff 0%, rgba(10, 16, 29, 0) 70%);
+  transform: rotate(160deg);
+}
+/*featured buttons*/
+.feat-btns {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.feat-btns .primary-btn {
+  width: 100%;
+}
+.primary-btn {
+  -webkit-appearance: none;
+  cursor: pointer;
+  min-width: 147px;
+  max-width: 520px;
+  height: 56px;
+  padding: 5px 30px;
+  font-size: 16px;
+  line-height: 20px;
+  font-family: "geom-graphic",sans-serif;
+  font-weight: 700;
+  background: #0ad89b;
+  color: #0a101d;
+  text-transform: uppercase;
+  border: 0;
+  display: inline-block;
+  vertical-align: top;
+  text-align: center;
+  text-decoration: none;
+  position: relative;
+  letter-spacing: .5px;
+  transition: background-color .4s ease-in-out,color .4s ease-out;
+}
+.feat-btns .primary-btn {
+  padding: 0 35px;
+  font-size: 15px;
+  line-height: 54px;
+  vertical-align: middle;
+  min-width: 232px;
+  margin: 0 6px;
+}
+.feat-details-btn {
+  background: transparent;
+  border: 2px solid #cad8ec;
+  color: #cad8ec;
+  transition: none;
+}
+
+/*Section header*/
+.section-header {
+  margin-bottom: 2rem;
+  margin-top: 3rem;
+}
+.section-header__title {
+  margin-bottom: 14px;
+  display: block;
 }
