--- a/client/src/index.css
+++ b/client/src/index.css
@@ -30,6 +30,11 @@ code {
 
 .header-icons a{
   color:#fff;
+  margin-right:15px;
+  padding: 2px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
 }
 
 /*override some materialize.css sitewide*/
@@ -50,7 +55,7 @@ h1 {
   background: var(--bg-transparent);
   box-shadow:none;
 }
-.book-title{
+.book-tag{
   color: #0ad89b;
 }
 .card-panel{
@@ -73,15 +78,17 @@ h1 {
 }
 
 /*featured product*/
-.featured-container {
-  margin: 0 auto;
-  max-width: 1360px;
-  padding: 0 2.5rem;
+.featured{
+  padding: 2rem 0;
+  position: relative;
+  background-image: url(https://cdn.shopify.com/s/files/1/0642/3648/6870/t/17/assets/faded-stars-compressed.png);
+  background-size: 100%;
+  background-repeat: no-repeat;
 }
 .featured:before {
   background-image: url(https://cdn.shopify.com/s/files/1/0642/3648/6870/t/17/assets/purple-swoop.svg);
   content: "";
-  top: 0;
+  top: -55px;
   right: 0;
   width: 44%;
   height: 300px;
@@ -95,8 +102,8 @@ h1 {
 .featured-product__inner {
   margin: 50px 0 0;
   display: flex;
-  align-items: flex-start;
-  justify-content: space-around;
+  align-items: center;
+  justify-content: space-evenly;
 }
 .product_details {
   width: 42%;
@@ -104,7 +111,8 @@ h1 {
   align-items: flex-start;
 }
 .product-details {
-  padding: 0 80px 0 0; /*media query this later*/
+  
+  max-width: 650px;
 }
 .product-tag {
   display: inline-flex;
@@ -125,13 +133,12 @@ h1 {
   max-height: 400px;
 }
 .featured-product__img {
-  width: 40%;
+  width: 25%;
   height: 40%;
   display: flex;
   flex-shrink: 0;
   align-items: flex-start;
   justify-content: center;
-  padding: 0 16px 32px;
 }
 .featured-product__title {
   font-size: 48px;
