--- a/client/src/components/footer.css
+++ b/client/src/components/footer.css
@@ -5,5 +5,10 @@ footer {
     color: #fff;
     font-weight: 700;
     font-size: 18px;
-    padding: 50px 0 20px;
+    padding: 20px 0 20px;
+}
+
+footer img {
+    width: 50px;
+    height: 50x;
 }
