--- a/client/src/index.css
+++ b/client/src/index.css
@@ -41,9 +41,11 @@ code {
   color:#fff;
   margin-right:15px;
   padding: 2px;
-  border-radius: 50%;
   display: flex;
   align-items: center;
+}
+.header-icons button {
+  padding: 4px 22px;
 }
 
 /*override some materialize.css sitewide*/
