--- a/client/src/components/footer.css
+++ b/client/src/components/footer.css
@@ -1,6 +1,5 @@
 footer {
     width:100%;
-    height:120px;
     background:#181e2a;
     color: #fff;
     font-weight: 700;
@@ -9,8 +8,9 @@ footer {
 }
 
 footer img {
-    width: 50px;
-    height: 50x;
+    width: 35px;
+    height: 35px;
+    margin-right:10px;
 }
 
 footer .hor_list li{
