--- a/client/src/pages/about.css
+++ b/client/src/pages/about.css
@@ -8,3 +8,20 @@
 .our_goal {
     text-align: center;
 }
+
+.parallax {
+    min-height: 500px;
+    
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.parallax1 {
+    background-image: url("https://i.kym-cdn.com/entries/icons/original/000/026/489/crying.jpg");
+}
+
+.parallax2 {
+    background-image: url();
+}
