--- a/client/src/pages/about.css
+++ b/client/src/pages/about.css
@@ -12,10 +12,10 @@
 .parallax {
     min-height: 500px;
     
+    background-size: cover;
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
 }
 
 .parallax1 {
@@ -23,5 +23,5 @@
 }
 
 .parallax2 {
-    background-image: url();
+    background-image: url("");
 }
