--- a/client/src/pages/contact.css
+++ b/client/src/pages/contact.css
@@ -1,4 +1,22 @@
 .FAQ {
-    width: 50%;
+    width: 75%;
     margin: 0 auto;
+}
+
+.spacer {
+    min-height: 10%;
+}
+
+.employees {
+    clip-path: inset(0 22% 0 10%);
+    width: 100%;
+    margin-left: 10%;
+    margin-top: 20%;
+    scale: 1.3;
+
+}
+
+.employees_text {
+    color: white;
+    text-shadow: 2px 2px 2px black;
 }
