--- a/client/src/pages/contact.css
+++ b/client/src/pages/contact.css
@@ -8,12 +8,21 @@
 }
 
 .employees {
-    clip-path: inset(0 22% 0 10%);
     width: 100%;
     margin-left: 10%;
     margin-top: 20%;
     scale: 1.3;
+}
+.employees_John {
+    clip-path: inset(0 22% 0 10%);
+}
 
+.employees_Seb {
+    clip-path: inset(0 15% 0 22%);
+}
+
+.employees_section {
+    height: 300px;
 }
 
 .employees_text {
