--- a/client/src/pages/profile.css
+++ b/client/src/pages/profile.css
@@ -1,9 +1,92 @@
 .user-profile {
-    margin:25px 0;
+    margin:35px 0;
 }
-.user-msg {
+.user-msg span {
     text-transform: capitalize;
 }
 .user-img {
     width:100%
+}
+
+/*user stats*/
+.user-stat {
+    background: #191e2e;
+    color: #e1e1ff;
+    border-radius: 12px;
+    margin: 4px 0 15px 0;
+}
+.card-header {
+    background: #34495e;
+    background-image: linear-gradient(45deg,#34495e 0%,#212e32 100%);
+    border-radius: 40% 60% 62% 38%/70% 45% 55% 30%;
+    box-shadow: 0 12px 20px -10px rgba(18,23,43,.28), 0 4px 20px 0 rgba(0,0,0,.12), 0 7px 8px -5px rgba(18, 23, 43, 0.2);
+    float: left;
+    text-align: center;
+    position: absolute;
+    margin: -27px 15px 0;
+    padding: 15px;
+    border-bottom: none;
+}
+.card-content {
+    text-align: right;
+    padding: 10px 20px;
+}
+
+.card-content h4 {
+    margin: 0;
+    line-height: 1.5em;
+    padding: 10px 2px;
+}
+.user-stat .card-footer {
+    margin: 0 20px 10px;
+    padding: 0 0 10px;
+}
+.card-footer .stats {
+    line-height: 22px;
+    font-size: 12px;
+    text-align: right;
+    font-weight: 500;
+}
+
+/*icons*/
+.front-icon:before {
+    width: 35px;
+    height: 35px;
+    background-size: 28px;
+}
+.front-icon:before, .front-icon-small:before {
+    content: '';
+    background-repeat: no-repeat;
+    background-position: center;
+    margin: 0 auto;
+    display: block;
+}
+.front-activity-white:before {
+    background-image: url(https://inmyculture.com/icons/profileicons/act-ft-white.svg);
+}
+.front-achievements-white:before {
+    background-image: url(https://inmyculture.com/icons/profileicons/ach-ft-white.svg);
+}
+.front-groups-white:before {
+    background-image: url(https://inmyculture.com/icons/profileicons/grou-ft-white.svg);
+}
+.front-friends-white:before {
+    background-image: url(https://inmyculture.com/icons/profileicons/fri-ft-white.svg);
+}
+
+/*small books*/
+.small-book{
+    width:85px;
+    height:85px;
+    border-radius: 50%;
+    border: 2px solid lightgray;
+    display: block;
+    margin:0 auto;
+}
+/*book form*/
+.book-form{
+    background: #191e2e;
+    color: #e1e1ff;
+    border-radius: 12px;
+    padding: 25px;
 }
