--- a/client/src/pages/contact.css
+++ b/client/src/pages/contact.css
@@ -29,3 +29,28 @@
     color: white;
     text-shadow: 2px 2px 2px black;
 }
+
+@media (max-width: 768px) {
+    .employees {
+        width: 100%;
+        margin-left: 0%;
+        margin-top: 20%;
+        scale: 1;
+    }
+    .employees_John {
+        clip-path: inset(0 22% 0 10%);
+    }
+    
+    .employees_Seb {
+        clip-path: inset(0 15% 0 22%);
+    }
+    
+    .employees_section {
+        height: 300px;
+    }
+    
+    .employees_text {
+        color: white;
+        text-shadow: 2px 2px 2px black;
+    }
+}
