Tried to make condition on profile and did some stuff on the product page

--- a/client/src/pages/pruduct.css
+++ b/client/src/pages/pruduct.css
@@ -15,6 +15,13 @@
     border-radius: 15px;
 }
 
+#price_text {
+    color: white;
+    font-size: 20pt;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
 #add_to_cart_button {
     width: 120px;
     font-size: 17pt;
