--- a/client/src/index.css
+++ b/client/src/index.css
@@ -187,7 +187,7 @@ h1 {
   border-top: 0;
   border-bottom: 0;
 }
-.featured .container:after {
+.featured:after {
   opacity: .275;
   content: "";
   position: absolute;
