--- a/client/src/pages/pruduct.css
+++ b/client/src/pages/pruduct.css
@@ -6,7 +6,7 @@
     width: 100%;
 }
 
-#add_to_cart_area {
+.add_to_cart_area {
     display: flex;
     align-items: center;
     background-color: #404454;
@@ -25,6 +25,10 @@
 #add_to_cart_button {
     width: 120px;
     font-size: 17pt;
+}
+
+#add_to_cart_area2{
+    margin-top: 20px;
 }
 
 #about_seller {
