--- a/client/src/pages/contact.css
+++ b/client/src/pages/contact.css
@@ -60,3 +60,145 @@
         background-color: #232323;
     }
 }
+
+/*nasty collapsible pure css*/
+.m-d.expand-list{
+    margin: 0;
+    padding: 0;
+}
+.m-d.expand-list > li{
+    list-style-type: none;
+    padding: 15px 0;
+    border-bottom: 1px solid #212121;
+    position: relative;
+/*         max-width: 80%; */
+}
+.m-d label[class^="tab"]:hover{
+    cursor: pointer;
+}
+.m-d input{
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+}
+.m-d input[class^="tab"]{
+    width: 100%;
+    height: 40px;
+    position: absolute;
+    left: 0;
+    top: 0; 
+}
+    .m-d input[class^="tab"]:hover{
+        cursor: pointer;
+    }
+.m-d label[class^="tab"]{
+    font-weight: bold;
+}
+.m-d .content{
+    height: auto;
+    max-height: 0;
+    overflow: hidden;
+    transform: translateY(20px);
+    transition: all 180ms ease-in-out 0ms; 
+}
+.m-d li[data-md-content="100"] input[class^="tab"]:checked ~ .content{
+    max-height: 100px;
+    transition: all 150ms ease-in-out 0ms;
+}
+.m-d li[data-md-content="200"] input[class^="tab"]:checked ~ .content{
+    max-height: 200px;
+    transition: all 200ms ease-in-out 0ms;
+}
+.m-d li[data-md-content="300"] input[class^="tab"]:checked ~ .content{
+    max-height: 300px;
+    transition: all 250ms ease-in-out 0ms;
+}
+.m-d li[data-md-content="400"] input[class^="tab"]:checked ~ .content{
+    max-height: 400px;
+    transition: all 250ms ease-in-out 0ms;
+}
+.m-d li[data-md-content="500"] input[class^="tab"]:checked ~ .content{
+    max-height: 500px;
+    transition: all 250ms ease-in-out 0ms;
+}
+.m-d li[data-md-content="600"] input[class^="tab"]:checked ~ .content{
+    max-height: 600px;
+    transition: all 250ms ease-in-out 0ms;
+}
+.m-d li[data-md-content="700"] input[class^="tab"]:checked ~ .content{
+    max-height: 700px;
+    transition: all 300ms ease-in-out 0ms;
+}
+.m-d li[data-md-content="800"] input[class^="tab"]:checked ~ .content{
+    max-height: 800px;
+    transition: all 300ms ease-in-out 0ms;
+}
+.m-d li[data-md-content="900"] input[class^="tab"]:checked ~ .content{
+    max-height: 900px;
+    transition: all 300ms ease-in-out 0ms;
+}
+.m-d li[data-md-content="1000"] input[class^="tab"]:checked ~ .content{
+    max-height: 1000px;
+    transition: all 350ms ease-in-out 0ms;
+}
+    .m-d li[data-md-content=""] input[class^="tab"]:checked ~ .content{
+    max-height: 1000px;
+    transition: all 250ms ease-in-out 0ms;
+}
+.m-d input[class^="tab"]:checked ~ .content{
+    margin-bottom: 20px;
+}
+
+.m-d .open-close-icon{
+    display: inline-block;
+    position: absolute;
+    right: 20px;
+    transform: translatey(2px);
+}
+.m-d .open-close-icon i{
+    position: absolute;
+    left: 0;
+}
+.m-d .open-close-icon .fa-minus{
+    transform:rotate(-90deg);
+    transition: transform 150ms ease-in-out 0ms;
+}
+.m-d input[class^="tab"]:checked ~ .open-close-icon .fa-minus{
+    transform: rotate(0deg);
+    transition: transform 150ms ease-in-out 0ms;
+}
+.m-d .open-close-icon .fa-plus{
+    opacity: 1;
+    transform:rotate(-90deg);
+    transition: opacity 50ms linear 0ms, transform 150ms ease-in-out 0ms;
+}
+.m-d input[class^="tab"]:checked ~ .open-close-icon .fa-plus{
+    opacity: 0;
+    transform: rotate(0deg);
+    transition: opacity 50ms linear 0ms, transform 150ms ease-in-out 0ms; 
+}
+/*collapsible stop materialized*/
+.contact-page [type="checkbox"]+span:not(.lever) {
+    position: absolute;
+    padding-left: 0;
+    cursor: pointer;
+    display: inline-block;
+    height: auto;
+    line-height: 0;
+    font-size: 0;
+    -webkit-user-select: auto;
+    -moz-user-select: auto;
+    -ms-user-select: auto;
+    user-select: auto;
+}
+.contact-page [type="checkbox"]+span:not(.lever):before,
+.contact-page [type="checkbox"]:not(.filled-in)+span:not(.lever):after{
+    display:none;
+}
+.contact-page [type="checkbox"]:checked+span:not(.lever):before {
+    display:none;
+}
+.contact-page label {
+    font-size: auto;
+    color:white
+}
