Changed to the footer to be a bit nicer

--- a/client/src/components/footer.css
+++ b/client/src/components/footer.css
@@ -12,7 +12,10 @@ footer img {
     height: 35px;
     margin-right:10px;
 }
-
+footer #logo {
+    width: 90px;
+    height: 90px;
+}
 footer .hor_list li{
     display: inline-block;
     padding-right: 20px;
