fix errors and added to books and lists

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -32,6 +32,11 @@ code {
 .flex-column {
   flex-direction: column;
 }
+.text-overflow {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
 /*header*/
 .head-nav, 
 .header-icons{
