--- a/client/src/pages/list.css
+++ b/client/src/pages/list.css
@@ -1,37 +1,23 @@
-.bRad {
-    border-radius:8px;
-  }
-  /*cards*/
-  .section-header__title {
-    font-size:2em;
-  }
-  .card {
-    background: var(--bg-transparent);
-    box-shadow:none;
-  }
-  .book-tag{
-    color: #0ad89b;
-  }
-  .card-panel{
-    background: var(--bg-transparent);
-    border: 2px solid var(--border-color);
-    color: var(--border-color);
-  }
-  .card .card-image.bRadT img{
-    border-top-left-radius: 8px;
-    border-top-right-radius: 8px;
-  }
-  .card.bRad .card-action:last-child {
-    border-bottom-left-radius: 8px;
-    border-bottom-right-radius: 8px;
-  }
-  .card .btn-floating.halfway-fab {
-    position: absolute;
-    right: 6px;
-    top: 7px;
-    min-width: 60px;
-    border-radius:6px;
-    background: #0ad89b;
-    text-align:center;
-  }
-  
+.book-tag{
+  color: #0ad89b;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+.book-tag i {
+  margin-right: 8px;
+}
+.card .btn-floating.halfway-fab {
+  position: absolute;
+  right: 6px;
+  top: 7px;
+  min-width: 60px;
+  border-radius:6px;
+  background: #0ad89b;
+  text-align:center;
+}
+.book-shadow {
+  box-shadow: 0 0 90px 0 rgba(82,58,204,.17);
+  border: 2px solid rgba(82,58,204,.5);
+    border-radius: 12px;
+}
