--- a/client/src/pages/pruduct.css
+++ b/client/src/pages/pruduct.css
@@ -1,5 +1,9 @@
+.marg-top {
+    margin-top:50px;
+}
 h1.product-title {
     font-size: 2.1rem;
+    margin:0;
 }
 #other_books {
     width: 100%;
