--- a/client/src/pages/list.css
+++ b/client/src/pages/list.css
@@ -13,7 +13,7 @@
   top: 7px;
   min-width: 60px;
   border-radius:6px;
-  background: #0ad89b;
+  background: #0a53d8;
   text-align:center;
 }
 .book-shadow {
